syntax = "proto3";

package mygomicro;

option go_package = "./proto;mygomicro";

service MyGoMicro {
	rpc Call(CallRequest) returns (CallResponse) {}
}

message CallRequest {
	string name = 1;
}

message CallResponse {
	string msg = 1;
}

